add display stream

--- a/htmlpages/student.html
+++ b/htmlpages/student.html
@@ -3,6 +3,13 @@
     <head>
         <meta charset="UTF-8">
         <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.3.0/socket.io.js"></script>
+        <style>
+            #image{
+                display: block;
+                margin-left: auto;
+                margin-right: auto;
+            }
+        </style>
         <title>Student</title>
     </head>
     <body>
